--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         </div>
 
         <div class="card">
+            <a href="compose/pages/page_animation.html">
+                <h2>Animations</h2>
+                <p>Default and Custom Spring Animations in jetpack Compose</p>
+            </a>
+        </div>
+
+        <div class="card">
             <a href="compose/pages/page_theme.html">
                 <h2>Theme</h2>
                 <p>Theme, Color, Shape, Type in Compose</p>
