--- a/compose/pages/page_animation.html
+++ b/compose/pages/page_animation.html
@@ -92,7 +92,7 @@
         console.log(`Fetching data for card ID: ${cardId}`);
 
         const data = [
-            { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output_animation_1.png',
+            { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output_animation_1.gif',
             description:
 `
 @Preview(showSystemUi = true)
@@ -342,7 +342,7 @@ fun Animation5(modifier: Modifier = Modifier) {
 
 `
 },
-{ id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output_animation_2.png',
+{ id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output_animation_2.gif',
 description:
 `
 @Preview(showSystemUi = true)
