--- a/profile/index.html
+++ b/profile/index.html
@@ -1001,7 +1001,7 @@
                                 </div>
                             </div>
                             <div class="button-border mt-3 mb-lg-0 mr-4">
-                                <a href="assets/Akshay_CV_2.6.pdf" class="pill-button">View CV</a>
+                                <a href="assets/Akshay_Pawar_Android_Resume.pdf" class="pill-button">View CV</a>
                             </div>
 
                         </div>
