--- a/compose/notes.html
+++ b/compose/notes.html
@@ -13,7 +13,9 @@
     - Compose handles nested layouts efficiently, This is an improvement from Android Views, where you need to avoid nested layouts for performance reasons.<br>
     - It is a best practice to pass a modifier to every composable and set it to a default value. <br>
     - In Compose, The only way to update the UI is by changing the state of the app. Hence you can control only state not ui, UI is Dependent on State <br>
-    - UDF (Undirectional Data Flow), It is a Design Pattern in which, state flows `down` and event flows `up`
+    - UDF (Undirectional Data Flow), It is a Design Pattern in which, state flows `down` and event flows `up` <br>
+    - APK = Android Package (Application Package File)
+    - Compose BOM = Compose Bill Of Material
     <hr>
     <p><b>Recycler View Notes</b></p>
     - In Scrollable List, 1) Define Separate Layout in Separate compose function, 2) Call same layout function from lazyColumn {items() { composeFun(param) } }<br>
