--- a/compose/pages/page_animation.html
+++ b/compose/pages/page_animation.html
@@ -12,6 +12,7 @@
 <header>
     <h1 class="header-heading">Jetpack Compose / Layout</h1>
     <div>
+        <a class="menu" href="../todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="../notes.html" id="notesLink">Notes</a>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
         <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
