--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1 class="header-heading">Jetpack Compose</h1>
         <div>
+            <a class="menu" href="compose/todo.html" id="todoLink">To-Do</a>
             <a class="menu" href="compose/notes.html" id="notesLink">Notes</a>
             <a class="menu selected" href="index.html" id="composeLink">Compose</a>
             <a class="menu" href="profile/index.html" id="profileLink">Profile</a>
@@ -50,7 +51,14 @@
         <div class="card">
             <a href="compose/pages/page_switch.html">
                 <h2>Switch</h2>
-                <p>Toggel Button, Switch Button in compose</p>
+                <p>Toggle Button, Switch Button in compose</p>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="compose/pages/page_navigation.html">
+                <h2>Navigation</h2>
+                <p>Navigate from one screen to other</p>
             </a>
         </div>
 
