--- a/compose/todo.html
+++ b/compose/todo.html
@@ -91,6 +91,11 @@
             <label for="item3" class="todo-label">Try to show multiple same ui in list and add listener</label>
         </div>
 
+        <div class="todo-item">
+            <input type="checkbox" id="item4" class="todo-checkbox">
+            <label for="item4" class="todo-label">Simple Pizza Order, Pass Data, Like Cupcake</label>
+        </div>
+
     </div>
 
 </body>
